# massccs

./: .README.md.swp  .ccs.out.swp  .readthedocs.yaml  04_1ubq_charge_4e_min.xyz  CMakeLists.txt  Doxyfile  Force_alpha.cpp  Force_nitrogen.cpp  Force_polarizability_values.cpp  LICENSE  README.md  c60.xyz  ccs.out  charmm.ff  gromos.ff  imos.ff  input.json  oplsaa.ff  uff.ff
cmake/: ClangFormat.cmake
data/: README.md  input.json
data/outputs/He_buffer_gas/: 1aon_charge_252.out  1aqf_charge_31_min.out  1cfd_charge_7_min.out  1dpx_charge_5_min.out  1dpx_charge_6_min.out  1dpx_charge_8_min.out  1fd3_charge_3_min.out  1gzx_charge_13_min_final.out  1hfx_charge_6_min.out  1hrc_charge_3_min.out  1hrc_charge_5_min.out  1hrc_charge_6_min.out  1lds_charge_6_min.out  1mlt_charge_3_min.out  1tei_charge_20_min.out  1ubq_charge_4_min.out  1vxg_charge_4_min.out  2akq_01_charge_7_min.out  2akq_02_charge_11_min.out  3bsz_charge_14_min.out  3j3q_charge_4068.out  3v03_charge_14_min.out  4avt_charge_31_min.out  4ayu_charge_22_min.out  4w6z_charge_23_min.out  6cgv_charge_9540.out  6co8_charge_171.out  6ola_charge_683.out  6pti_charge_4_min.out  6vsb_charge_24.out  7df4_charge_33.out  7mft_charge_39.out  7w17_charge_300.out
data/outputs/N2_buffer_gas/: 1aon_charge_252.out  1aqf_charge_31_min.out  1hrc_charge_6_min.out  1tei_charge_20_min.out  2akq_01_charge_7_min.out  2akq_02_charge_11_min.out  3bsz_charge_14_min.out  3j3q_charge_4068.out  3v03_charge_14_min.out  4avt_charge_31_min.out  4ayu_charge_22_min.out  4w6z_charge_23_min.out  6cgv_charge_9540.out  6co8_charge_171.out  6ola_charge_683.out  6vsb_charge_24.out  7df4_charge_33.out  7w17_charge_300.out
doc/: conf.py  index.rst  useful.rst
doc/_build/doctrees/: environment.pickle  getting_started.doctree  index.doctree  useful.doctree
doc/_build/doctrees/getting_started/: calculation.doctree  fullparameters.doctree  installation.doctree
doc/_build/html/: .buildinfo  genindex.html  getting_started.html  index.html  search.html  searchindex.js  useful.html
doc/_build/html/_sources/: index.rst.txt
doc/_build/html/_sources/getting_started/: installation.rst.txt
doc/_build/html/getting_started/: calculation.html  fullparameters.html  installation.html
docs/: conf.py  getting_started.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/getting_started/: calculation.doctree  fullparameters.doctree  installation.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  useful.html
docs/_build/html/getting_started/: calculation.html
docs/getting_started/: calculation.rst  fullparameters.rst
docs/source/: conf.py  index.rst  useful.rst
src/: .Equipotential.cpp.swp  .Force.cpp.swp  Equipotential.cpp  Force.cpp  GasBuffer.cpp  Input.cpp  LinkedCell.cpp  Math.cpp  MoleculeTarget.cpp  RandomNumber.cpp  System.cpp  Time.cpp  main.cpp
src/headers/: .MoleculeTarget.h.swp  Constants.h  Equipotential.h  Force.h  GasBuffer.h  Input.h  LinkedCell.h  Math.h  MoleculeTarget.h  RandomNumber.h  System.h  Time.h
